# instagram-ai-assistant

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  PHASE_II_CHAOS_REPORT.md  PHASE_I_STRESS_TEST_REPORT.md  README.md  RESILIENCE_PATTERNS.md  SECRETS.md  ZERO_DAY_AUDIT_REPORT.md  create_architecture_gif.py  create_small_gif.py  docker-compose.yml  phase1_final_validation.sh  pyproject.toml  pytest.ini  validate_phase1.sh
kubernetes/helm-chart/: Chart.yaml  values.yaml
kubernetes/helm-chart/scripts/: setup-vault.sh
kubernetes/helm-chart/templates/: NOTES.txt  _helpers.tpl  api-gateway.yaml  configmap.yaml  hpa.yaml  ingestion-worker.yaml  ingress.yaml  intelligence-worker.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  resource-quota.yaml  serviceaccount.yaml
scripts/: init-db.sql  setup-vault.sh
src/api_gateway/: pyproject.toml  requirements.txt
src/api_gateway/app/: main.py
src/api_gateway/app/core/: config.py
src/api_gateway/app/middleware/: __init__.py  resilience.py
src/api_gateway/tests/: test_placeholder.py  test_webhooks.py
src/ingestion_worker/: pyproject.toml  requirements.txt
src/ingestion_worker/app/tasks/: ingestion.py  vector_operations.py
src/ingestion_worker/tests/: test_placeholder.py
src/intelligence_worker/: pyproject.toml  requirements.txt
src/intelligence_worker/app/: celery_app.py
src/intelligence_worker/tests/: test_placeholder.py
src/shared_lib/: requirements.txt  setup.py
src/shared_lib/tests/: test_placeholder.py  test_repository.py  test_resilient_ai.py  test_transactional_secrets.py
tests/: test_e2e_flow.py
tests/integration/: test_resilience.py  test_transactions.py
tests/stress/: test_load.py
tests/validation/: test_armor_plating.py
(+28 files in other folders)
