[tool.poetry]
name = "aura-platform"
version = "0.1.0"
description = "AI-powered Instagram commerce assistant"
authors = ["Mohammad Atashi"]
readme = "README.md"
packages = [{ include = "shared_lib", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"

# --- CONSOLIDATED DEPENDENCIES --- #
fastapi = ">=0.104.0"
uvicorn = {version = ">=0.24.0", extras = ["standard"]}
httpx = ">=0.25.2"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"
celery = ">=5.3.4"
kombu = ">=5.3.0"
redis = ">=5.0.1"
passlib = {version = ">=1.7.4", extras = ["bcrypt"]}
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}
cryptography = ">=41.0.0"
python-multipart = ">=0.0.6"
python-dotenv = ">=1.0.0"
structlog = ">=23.2.0"
requests = ">=2.31.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
pymilvus = ">=2.3.4"
langchain = ">=0.1.0"
langchain-community = ">=0.0.10"
google-generativeai = ">=0.3.2"
openai = ">=1.3.0"
sentence-transformers = ">=2.2.2"
tenacity = ">=8.2.3"
pybreaker = ">=1.0.1"
circuitbreaker = ">=1.4.0"
pika = ">=1.3.2"
ShopifyAPI = ">=12.0.0"

# --- Local Service Packages --- #
api_gateway = { path = "src/api_gateway", develop = true }
intelligence_worker = { path = "src/intelligence_worker", develop = true }
ingestion_worker = { path = "src/ingestion_worker", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


